28 May 2018: Wouter
	- Fix windows tcp and tls spin on events.
	- Add routine from getdns to add windows cert store to the SSL_CTX.
	- tls-win-cert option that adds the system certificate store for
	  authenticating DNS-over-TLS connections.  It can be used instead
	  of the tls-cert-bundle option, or with it to add certificates.

25 May 2018: Wouter
	- For TCP and TLS connections that don't establish, perform address
	  update in infra cache, so future selections can exclude them.
	- Fix that tcp sticky events are removed for closed fd on windows.
	- Fix close events for tcp only.

24 May 2018: Wouter
	- Fix that libunbound can do DNS-over-TLS, when configured.
	- Fix that windows unbound service can use DNS-over-TLS.
	- unbound-host initializes ssl (for potential DNS-over-TLS usage
	  inside libunbound), when ssl upstream or a cert-bundle is configured.

23 May 2018: Wouter
	- Use accept4 to speed up incoming TCP (and TLS) connections,
	  available on Linux and FreeBSD.

17 May 2018: Ralph
	- Qname minimisation default changed to yes.

15 May 2018: Wouter
	- Fix low-rtt-pct to low-rtt-permil, as it is parts in one thousand.

11 May 2018: Wouter
	- Fix contrib/libunbound.pc for libssl libcrypto references,
	  from https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=226914

7 May 2018: Wouter
	- Fix windows to not have sticky TLS events for TCP.
	- Fix read of DNS over TLS length and data in one read call.
	- Fix mesh state assertion failure due to callback removal.

3 May 2018: Wouter
	- Fix that configure --with-libhiredis also turns on cachedb.
	- Fix gcc 8 buffer warning in testcode.
	- Fix function type cast warning in libunbound context callback type.

2 May 2018: Wouter
	- Fix fail to reject dead peers in forward-zone, with ssl-upstream.

1 May 2018: Wouter
	- Fix that unbound-control reload frees the rrset keys and returns
	  the memory pages to the system.

30 April 2018: Wouter
	- Fix spelling error in man page and note defaults as no instead of
	  off.
